--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- SEO Meta Tags -->
-    <title>BisaAqiqah - Jasa Aqiqah Profesional & Terpercaya di Rancaekek</title>
-    <meta name="description" content="BisaAqiqah menyediakan layanan aqiqah lengkap dan sesuai syariat di Rancaekek, Bandung. Paket hemat, masakan lezat, dan proses mudah. Pesan sekarang!">
-    <meta name="keywords" content="aqiqah rancaekek, jasa aqiqah bandung, paket aqiqah murah, sentra aqiqah, aqiqah syar'i, pesan aqiqah online">
+    <title>BisaAqiqah - Jasa Aqiqah Murah di Bandung & Rancaekek | Profesional</title>
+    <meta name="description" content="Cari jasa aqiqah murah di Bandung & Rancaekek? BisaAqiqah solusinya. Paket aqiqah lengkap, harga terbaik, sesuai syariat, dan gratis ongkir. Hubungi kami!">
+    <meta name="keywords" content="aqiqah murah bandung, aqiqah bandung, aqiqah rancaekek, jasa aqiqah bandung, paket aqiqah murah, sentra aqiqah, aqiqah syar'i, pesan aqiqah online">
     <meta name="author" content="BisaAqiqah">
 
-    <!-- Favicon (Ganti dengan URL favicon Anda) -->
-    <link rel="icon" href="https://placehold.co/32x32/16a34a/ffffff?text=BA" type="image/png">
+    <!-- Favicon -->
+    <link rel="icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiFcnPyN6fp1V2_1lc4MdeQ6SCtisawerDxHR2NQ-XfI4NBhbpwgmu_33c0PCk7w0xP89tL-UkN0ld78Hnm9B2QxVbzkZGifPf45TxPchVOlbaBtDLmi7R-Ik_UIu35QTgMXZ23CGZ8PqJbvRzSGL2abNh9TmFejfgmYkmILgfaBc392HR8B-ySBfkeTyA/s1600/Gemini_Generated_Image_6ay6vs6ay6vs6ay6.png" type="image/png">
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -68,8 +68,15 @@
 
     <!-- Header & Navigasi -->
     <header id="header" class="bg-white/80 backdrop-blur-lg sticky top-0 z-40 shadow-sm">
-        <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="#" class="text-2xl font-bold text-green-700">BisaAqiqah</a>
+        <div class="container mx-auto px-6 py-3 flex justify-between items-center">
+            <div class="flex items-center space-x-2">
+                <!-- Logo Sentra Aqiqah (no link) -->
+                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEghctafuHYrxjME4FfWnKaS2jMtAq6hQGNLhkdS4ENHYTm8ME0YEbkE8XRlu2T0MuH_-cqJR1-fdo4dbzmddl44UyC5D7f2YyXssloxxEJdSWEyithtKJdOONW2CVKMyGXFBMslqvyvEnA3xyjrhBIybINAY4S2i0AzIIewQXCA_i9Td4Rsyte4rJlnKHg/s1600/ChatGPT%20Image%2025%20Jun%202025,%2021.14.55.png" alt="Logo Sentra Aqiqah" class="h-10">
+                <!-- Logo Bisa Aqiqah (with link) -->
+                <a href="#">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjiTaHXuxrN0G1mTQhjKndLd8VqhsKtdf5in4blEaxRMb63g1cN7Dhe7JuyImPWFjYQExpS50SRd3T4X5a7mPjc9hT3ilb4SxkIJDFNNk5TTkd1HkZVAqR19NbkiIB9akRzEWVxNzndSwc8blK9Bm-yt1F8NxLsBJ4Ut6qaK_9pxyzu6IEAkoG02lfxDq0/s1600/ChatGPT%20Image%2025%20Jun%202025,%2021.09.50.png" alt="Logo Bisa Aqiqah" class="h-12">
+                </a>
+            </div>
             <nav class="hidden md:flex space-x-8 items-center">
                 <a href="#home" class="text-gray-600 hover:text-green-700">Home</a>
                 <a href="#paket" class="text-gray-600 hover:text-green-700">Paket Aqiqah</a>
@@ -96,9 +103,9 @@
         <!-- Hero Section -->
         <section id="home" class="hero-bg py-20 md:py-32">
             <div class="container mx-auto px-6 text-center">
-                <h1 class="text-4xl md:text-6xl font-bold text-green-800 mb-4 leading-tight">Amanah & Profesional</h1>
-                <h2 class="text-2xl md:text-4xl font-semibold text-gray-700 mb-6">Wujudkan Aqiqah Terbaik di Rancaekek</h2>
-                <p class="max-w-3xl mx-auto text-gray-600 mb-8">BisaAqiqah, bagian dari Sentra Aqiqah, hadir untuk memudahkan ibadah aqiqah Anda. Kami pastikan prosesnya sesuai syariat, praktis, dan hidangannya lezat.</p>
+                <h1 class="text-4xl md:text-6xl font-bold text-green-800 mb-4 leading-tight">Aqiqah Murah, Amanah & Profesional</h1>
+                <h2 class="text-2xl md:text-4xl font-semibold text-gray-700 mb-6">Jasa Aqiqah Terbaik di Bandung & Rancaekek</h2>
+                <p class="max-w-3xl mx-auto text-gray-600 mb-8">BisaAqiqah hadir untuk memudahkan ibadah aqiqah Anda di seluruh area Bandung dan Rancaekek. Kami pastikan prosesnya sesuai syariat, harganya murah, dan hidangannya lezat.</p>
                 <a href="#paket" class="bg-green-600 text-white px-8 py-3 rounded-full text-lg font-semibold hover:bg-green-700 transition-transform transform hover:scale-105">Lihat Paket Aqiqah</a>
             </div>
         </section>
@@ -152,13 +159,21 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <!-- Feature 1 -->
                     <div class="bg-white p-6 rounded-lg shadow-md text-center">
-                         <div class="flex justify-center items-center mb-4 bg-green-100 rounded-full w-16 h-16 mx-auto">
+                        <div class="flex justify-center items-center mb-4 bg-green-100 rounded-full w-16 h-16 mx-auto">
                             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#15803d" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-shield-check"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10"/><path d="m9 12 2 2 4-4"/></svg>
                         </div>
                         <h3 class="text-xl font-semibold mb-2">Sesuai Syariat</h3>
                         <p class="text-gray-600">Proses penyembelihan dan pengolahan kami jamin sesuai dengan tuntunan syariat Islam.</p>
                     </div>
-                    <!-- Feature 2 -->
+                    <!-- Feature 2: NEW -->
+                    <div class="bg-white p-6 rounded-lg shadow-md text-center">
+                        <div class="flex justify-center items-center mb-4 bg-green-100 rounded-full w-16 h-16 mx-auto">
+                           <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#15803d" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-badge-dollar-sign"><path d="M3.85 8.62a4 4 0 0 1 4.78-4.78l1.4 1.4a1 1 0 0 0 1.4-1.4l-1.4-1.4A6 6 0 0 0 3.5 8.5l1.4 1.4a1 1 0 0 0 1.4-1.4Z"/><path d="M20.15 15.38a4 4 0 0 1-4.78 4.78l-1.4-1.4a1 1 0 0 0-1.4 1.4l1.4 1.4a6 6 0 0 0 8.5-6.8l-1.4-1.4a1 1 0 0 0-1.4 1.4Z"/><path d="M12 18H12.01"/><path d="M15 12h-3a3 3 0 0 0-3 3v1"/><path d="M12 9.01V6"/><path d="M10.2 11.8a1 1 0 1 0-1.4-1.4"/></svg>
+                        </div>
+                        <h3 class="text-xl font-semibold mb-2">Harga Paling Murah</h3>
+                        <p class="text-gray-600">Kami jamin Anda mendapatkan harga aqiqah paling murah dan kompetitif di Bandung, tanpa mengurangi kualitas.</p>
+                    </div>
+                    <!-- Feature 3 -->
                     <div class="bg-white p-6 rounded-lg shadow-md text-center">
                         <div class="flex justify-center items-center mb-4 bg-green-100 rounded-full w-16 h-16 mx-auto">
                              <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#15803d" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-award"><circle cx="12" cy="8" r="6"/><path d="M15.477 12.89 17 22l-5-3-5 3 1.523-9.11"/></svg>
@@ -166,7 +181,7 @@
                         <h3 class="text-xl font-semibold mb-2">Hewan Berkualitas</h3>
                         <p class="text-gray-600">Kami hanya menggunakan domba/kambing yang sehat, cukup umur, dan bebas dari cacat.</p>
                     </div>
-                    <!-- Feature 3 -->
+                    <!-- Feature 4 -->
                     <div class="bg-white p-6 rounded-lg shadow-md text-center">
                         <div class="flex justify-center items-center mb-4 bg-green-100 rounded-full w-16 h-16 mx-auto">
                             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#15803d" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-soup"><path d="M12 21.35A10 10 0 0 1 3.65 12H22a10 10 0 0 1-9.65 9.35V12H3.65"/><path d="M18.79 3.21a4 4 0 0 0-5.66 0V12h5.66a4 4 0 0 0 0-5.66Z"/></svg>
@@ -174,23 +189,15 @@
                         <h3 class="text-xl font-semibold mb-2">Masakan Lezat & Higienis</h3>
                         <p class="text-gray-600">Diolah oleh tim koki berpengalaman, menghasilkan hidangan sate, gule, dan lainnya yang nikmat.</p>
                     </div>
-                    <!-- Feature 4 -->
+                    <!-- Feature 5 -->
                     <div class="bg-white p-6 rounded-lg shadow-md text-center">
                         <div class="flex justify-center items-center mb-4 bg-green-100 rounded-full w-16 h-16 mx-auto">
                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#15803d" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-box"><path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"/><polyline points="3.27 6.96 12 12.01 20.73 6.96"/><line x1="12" y1="22.08" x2="12" y2="12"/></svg>
                         </div>
                         <h3 class="text-xl font-semibold mb-2">Praktis & Lengkap</h3>
-                        <p class="text-gray-600">Paket sudah termasuk sertifikat, dokumentasi, dan gratis ongkir untuk wilayah Rancaekek.</p>
+                        <p class="text-gray-600">Paket sudah termasuk sertifikat, dokumentasi, dan gratis ongkir untuk wilayah Bandung & sekitarnya.</p>
                     </div>
-                     <!-- Feature 5 -->
-                    <div class="bg-white p-6 rounded-lg shadow-md text-center">
-                        <div class="flex justify-center items-center mb-4 bg-green-100 rounded-full w-16 h-16 mx-auto">
-                           <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#15803d" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-thumbs-up"><path d="M7 10v12"/><path d="M18 10V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v6H4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h2.73a2 2 0 0 1 1.58.74l2.14 2.86a1 1 0 0 0 1.55 0l2.14-2.86a2 2 0 0 1 1.58-.74H20a2 2 0 0 0 2-2v-4a2 2 0 0 0-2-2h-2Z"/></svg>
-                        </div>
-                        <h3 class="text-xl font-semibold mb-2">Terpercaya</h3>
-                        <p class="text-gray-600">Sebagai cabang dari Sentra Aqiqah, kami membawa standar kualitas dan amanah yang telah terbukti.</p>
-                    </div>
-                     <!-- Feature 6 -->
+                    <!-- Feature 6 -->
                     <div class="bg-white p-6 rounded-lg shadow-md text-center">
                          <div class="flex justify-center items-center mb-4 bg-green-100 rounded-full w-16 h-16 mx-auto">
                             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#15803d" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-gift"><polyline points="20 12 20 22 4 22 4 12"/><rect width="20" height="5" x="2" y="7"/><line x1="12" y1="22" x2="12" y2="7"/><path d="M12 7H7.5a2.5 2.5 0 0 1 0-5C11 2 12 7 12 7z"/><path d="M12 7h4.5a2.5 2.5 0 0 0 0-5C13 2 12 7 12 7z"/></svg>
@@ -199,6 +206,18 @@
                         <p class="text-gray-600">Sebagian keuntungan kami salurkan untuk anak yatim & dhuafa melalui RAPIYA.</p>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <!-- Home Visit Section -->
+        <section id="konsultasi" class="bg-green-700 text-white py-16">
+            <div class="container mx-auto px-6 text-center">
+                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="mx-auto mb-4"><path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><path d="M22 21v-2a4 4 0 0 0-3-3.87"/><path d="M16 3.13a4 4 0 0 1 0 7.75"/></svg>
+                <h2 class="text-3xl font-bold mb-4">Masih Ragu? Kami Siap Datang ke Rumah Anda</h2>
+                <p class="max-w-3xl mx-auto mb-8">Untuk memberikan keyakinan penuh, tim kami siap mengunjungi rumah Anda untuk menjelaskan detail paket dan menjawab semua pertanyaan secara langsung. Atur jadwal konsultasi gratis sekarang, tanpa kewajiban apa pun.</p>
+                <a href="https://api.whatsapp.com/send?phone=6289676444808&text=Halo%2C%20BisaAqiqah%2C%20saya%20tertarik%20dan%20ingin%20mengatur%20jadwal%20konsultasi%20di%20rumah." target="_blank" class="bg-white text-green-700 px-8 py-3 rounded-full text-lg font-semibold hover:bg-gray-100 transition-colors">
+                    Atur Jadwal Kunjungan
+                </a>
             </div>
         </section>
 
@@ -253,11 +272,11 @@
                                <div class="flex items-center mb-4">
                                    <img src="https://placehold.co/48x48/e2e8f0/334155?text=D" alt="Foto Pelanggan" class="w-12 h-12 rounded-full mr-4">
                                    <div>
-                                       <h4 class="font-semibold">Dewi - Solokan Jeruk</h4>
+                                       <h4 class="font-semibold">Dewi - Kota Bandung</h4>
                                        <p class="text-sm text-yellow-500">★★★★★</p>
                                    </div>
                                </div>
-                               <p class="text-gray-600 italic">"Pelayanannya ramah sekali, semua pertanyaan dijawab dengan sabar. Pengiriman juga tepat waktu. Sangat memuaskan."</p>
+                               <p class="text-gray-600 italic">"Pelayanannya ramah sekali, semua pertanyaan dijawab dengan sabar. Pengiriman juga tepat waktu sampai ke rumah di Bandung. Sangat memuaskan."</p>
                            </div>
                        </div>
                         <div class="flex-shrink-0 w-[90vw] md:w-[28rem] mx-4">
@@ -315,11 +334,11 @@
                                <div class="flex items-center mb-4">
                                    <img src="https://placehold.co/48x48/e2e8f0/334155?text=D" alt="Foto Pelanggan" class="w-12 h-12 rounded-full mr-4">
                                    <div>
-                                       <h4 class="font-semibold">Dewi - Solokan Jeruk</h4>
+                                       <h4 class="font-semibold">Dewi - Kota Bandung</h4>
                                        <p class="text-sm text-yellow-500">★★★★★</p>
                                    </div>
                                </div>
-                               <p class="text-gray-600 italic">"Pelayanannya ramah sekali, semua pertanyaan dijawab dengan sabar. Pengiriman juga tepat waktu. Sangat memuaskan."</p>
+                               <p class="text-gray-600 italic">"Pelayanannya ramah sekali, semua pertanyaan dijawab dengan sabar. Pengiriman juga tepat waktu sampai ke rumah di Bandung. Sangat memuaskan."</p>
                            </div>
                        </div>
                         <div class="flex-shrink-0 w-[90vw] md:w-[28rem] mx-4">
@@ -346,7 +365,7 @@
                     <div>
                         <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-4">Tentang BisaAqiqah</h2>
                         <p class="text-gray-600 mb-4">
-                           <strong>BisaAqiqah</strong> adalah unit usaha dari <strong>Sentra Aqiqah Indonesia</strong>, yang telah berpengalaman melayani ribuan pelanggan. Kami hadir lebih dekat untuk melayani masyarakat di Rancaekek dan sekitarnya dengan standar kualitas yang sama.
+                           <strong>BisaAqiqah</strong> adalah unit usaha dari <strong>Sentra Aqiqah Indonesia</strong>, yang telah berpengalaman melayani ribuan pelanggan. Kami hadir lebih dekat untuk melayani masyarakat di Rancaekek, Bandung, dan sekitarnya dengan standar kualitas yang sama.
                         </p>
                         <h3 class="text-xl font-semibold mb-2 mt-6">Visi Kami</h3>
                         <p class="text-gray-600 mb-4">Menjadi mitra terpercaya bagi umat muslim dalam menunaikan ibadah aqiqah yang mudah, praktis, dan sesuai syariat.</p>
@@ -416,7 +435,7 @@
     <footer class="bg-gray-800 text-white py-8">
         <div class="container mx-auto px-6 text-center">
             <p>&copy; <span id="year"></span> BisaAqiqah. Bagian dari Sentra Aqiqah Indonesia.</p>
-            <p class="text-sm text-gray-400 mt-1">Solusi Aqiqah Amanah di Rancaekek.</p>
+            <p class="text-sm text-gray-400 mt-1">Solusi Aqiqah Amanah di Bandung & Rancaekek.</p>
              <div class="flex justify-center space-x-4 mt-4">
                 <a href="#" class="text-gray-400 hover:text-white"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-facebook"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"/></svg></a>
                 <a href="#" class="text-gray-400 hover:text-white"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-instagram"><rect width="20" height="20" x="2" y="2" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" x2="17.51" y1="6.5" y2="6.5"/></svg></a>
@@ -435,8 +454,8 @@
     </a>
 
     <script>
-        // --- GANTI NOMOR WHATSAPP ANDA DI SINI ---
-        const nomorWhatsApp = "6289676444808"; // Ganti dengan nomor WA Anda, awali dengan 62
+        // --- NOMOR WHATSAPP ANDA ---
+        const nomorWhatsApp = "6289676444808"; 
 
         // --- SCRIPT UNTUK FUNGSI WEBSITE ---
         document.addEventListener('DOMContentLoaded', function() {
